--- a/OrlovskaAnnaRestService/pom.xml
+++ b/OrlovskaAnnaRestService/pom.xml
@@ -22,6 +22,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
+        <!--<dependency>-->
+            <!--<groupId>com.sun.jersey</groupId>-->
+            <!--<artifactId>jersey-client</artifactId>-->
+            <!--<version>1.8</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-bundle</artifactId>
